<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/layout_new_capture"
    tools:context="bw.co.ja.mfdatalogger.NewCaptureActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_new_capture_location"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spinner_floor"
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

                <Spinner
                    android:id="@+id/spinner_quadrant"
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

                <EditText
                    android:id="@+id/input_room"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textCapWords"
                    android:hint="@string/label_new_capture_room"
                    android:selectAllOnFocus="true"/>
            </LinearLayout>

            <EditText
                android:id="@+id/input_location_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textCapSentences|textAutoCorrect"
                android:hint="@string/label_new_capture_location_description"
                android:layout_marginBottom="10dp"/>

            <EditText
                android:id="@+id/input_local_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textCapSentences|textAutoCorrect"
                android:hint="@string/label_new_capture_location_activity"
                />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_new_capture_time"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:layout_marginBottom="20dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/input_new_capture_minutes"
                    android:layout_width="85dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number"
                    android:hint="@string/label_new_capture_default_time"
                    android:gravity="end"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:labelFor="@id/input_new_capture_minutes"
                    android:text="@string/label_new_capture_time_unit"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium"
                    android:textColor="@android:color/black"/>
            </LinearLayout>

        </LinearLayout>

        <Button
            android:text="@string/button_new_capture_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_new_capture_start"
            />

    </LinearLayout>

</RelativeLayout>
